Fix vertical alignment of discriminator

--- a/site/src/styles/App.scss
+++ b/site/src/styles/App.scss
@@ -793,6 +793,9 @@ button {
                 input {
                     flex-grow: 1;
                 }
+                p {
+                    margin-bottom: 20px;
+                }
                 display: flex;
                 align-items: center;
                 gap: 10px;
